@@ -7,7 +7,8 @@ void
 Castro::construct_old_thermo_source(MultiFab& source, MultiFab& state, Real time, Real dt)
 {
   // we only include p divU in method of lines integration
-  if (time_integration_method == CornerTransportUpwind) return;
+  if (!(time_integration_method == MethodOfLines ||
+        time_integration_method == SpectralDeferredCorrections)) return;
 
   MultiFab thermo_src(grids, dmap, NUM_STATE, 0);
 
@@ -25,8 +26,10 @@ Castro::construct_old_thermo_source(MultiFab& source, MultiFab& state, Real time
 void
 Castro::construct_new_thermo_source(MultiFab& source, MultiFab& state_old, MultiFab& state_new, Real time, Real dt)
 {
+
   // we only include p divU in method of lines integration
-  if (time_integration_method == CornerTransportUpwind) return;
+  if (!(time_integration_method == MethodOfLines ||
+        time_integration_method == SpectralDeferredCorrections)) return;
 
   amrex::Abort("you should not get here!");
 }
